test new grid mobile

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
   <body>
-
+    <div class="grid-wrapper">
       <header class="block header">
-        <div class="header-left"></div>
+        <div class="header-left">
+        </div>
         <div class="header-right">
           <h1 class="header-title">Thomas Hoenselaars</h1>
           <h2 class="header-sub">Junior Frontend Developer</h2>
@@ -173,13 +174,7 @@
           </div>
         </section>
       </main>
-
-      <!-- <footer class="block footer">
-        <div class="contact">
-          <h2 class="contact-title">Contact info</h2>
-        </div>
-      </footer> -->
-
+    </div>
 
   </body>
 </html>
