--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
             <div class="course freelance javascript">
               <div class="card">
                 <a href="https://lucid-lewin-04aa78.netlify.com/" target="_blank">
-                  <img src="images/mow.png" alt="" class="card-img" />
+                  <img src="/images/mow.png" alt="" class="card-img" />
                   <div class="card-body">
                     <div class="card-top">
                       <h3 class="course-name">MOW Music</h3>
@@ -93,7 +93,7 @@
             <div class="course freelance">
               <div class="card">
                 <a href="https://trusting-wiles-293493.netlify.com" target="_blank">
-                <img src="images/drumdrumdrum.png" alt="" class="card-img" />
+                <img src="/images/drumdrumdrum.png" alt="" class="card-img" />
                 <div class="card-body">
                   <div class="card-top">
                     <h3 class="course-name">Drumdrumdrum</h3>
@@ -106,7 +106,7 @@
             <div class="course assignment javascript">
               <div class="card">
                 <a href="https://thomashoenselaars.github.io/Week14Todo/" target="_blank">
-                <img src="images/todojsnee1.jpg" alt="" class="card-img" />
+                <img src="/images/todojs.png" alt="" class="card-img" />
                 <div class="card-body">
                   <div class="card-top">
                     <h3 class="course-name">Week 14: To Do List</h3>
@@ -119,7 +119,7 @@
             <div class="course assignment">
               <div class="card">
                   <a href="https://thomashoenselaars.github.io/Paradiso-check/" target="_blank">
-                <img src="images/paradiso.png" alt="" class="card-img" />
+                <img src="/images/paradiso.png" alt="" class="card-img" />
                 <div class="card-body">
                   <div class="card-top">
                     <h3 class="course-name">Week 12: Paradiso</h3>
@@ -147,7 +147,7 @@
               <div class="card">
                   <a href="https://thomashoenselaars.github.io/week9-1/" target="_blank">
 
-                <img src="images/pathe.png" alt="" class="card-img" />
+                <img src="/images/pathe.png" alt="" class="card-img" />
                 <div class="card-body">
                   <div class="card-top">
                     <h3 class="course-name">Week 9: Pathe</h3>
@@ -161,7 +161,7 @@
             <div class="course assignment">
               <div class="card">
                   <a href="https://thomashoenselaars.github.io/Week8AH/" target="_blank">
-                <img src="images/allerhande.png" alt="" class="card-img" />
+                <img src="/images/allerhande.png" alt="" class="card-img" />
                 <div class="card-body">
                   <div class="card-top">
                     <h3 class="course-name">Week 8: Allerhande</h3>
