--- a/src/index.html
+++ b/src/index.html
@@ -81,12 +81,12 @@
               <div class="card">
                 <a href="https://lucid-lewin-04aa78.netlify.com/" target="_blank">
                   <img src="/images/mow.png" alt="" class="card-img" />
-                  <div class="card-body">
-                    <div class="card-top">
-                      <h3 class="course-name">MOW Music</h3>
-                    </div>
-                    <p class="course-cat">Freelance</p>
-                    <p class="course-description">Freelance job for Music producer MOW Music <br /><br />With: fullpageJS and Flickity</p>
+                <div class="card-body">
+                  <div class="card-top">
+                    <h3 class="course-name">MOW Music</h3>
+                  </div>
+                <p class="course-cat">Freelance</p>
+                <p class="course-description">Freelance job for Music producer MOW Music <br /><br />With: fullpageJS and Flickity</p>
                 </a>
               </div>
             </div>
@@ -106,7 +106,7 @@
             <div class="course assignment javascript">
               <div class="card">
                 <a href="https://thomashoenselaars.github.io/Week14Todo/" target="_blank">
-                <img src="/images/todojs.png" alt="" class="card-img" />
+                <img src="images/todojsnee1.jpg" alt="" class="card-img" />
                 <div class="card-body">
                   <div class="card-top">
                     <h3 class="course-name">Week 14: To Do List</h3>
