--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <div class="header-right">
           <h1 class="header-title">Thomas Hoenselaars</h1>
           <h2 class="header-sub">Front-end Developer</h2>
-          <p>My name is Thomas, and I'm a music producer, tennis player, Volvo enthousiast and last but not least, a Front-end Developer with a keen eye for detail and a fascination for technological innovation.</p>
+          <p>My name is Thomas, and I'm a music producer, tennis player, Volvo enthousiast and last but not least, a Front-end Developer with a background in social sciences, a keen eye for detail and a fascination for technological innovation.</p>
           <ul class="socialmedia-nav">
             <li>
               <a href="https://www.linkedin.com/in/thomashoenselaars/" target="_blank">
